# hda-life-expectancy-dashboard

./: .gitignore  README.md  analysis.py  analysis_results.csv  config.py  data_loader.py  exceptions.py  life_expectancy_trend.html  logging_config.py  master_dataset.csv  preprocessing.py  pyproject.toml  requirements.txt  sankey.html  visualizations.py  wb_metadata.py  world_map.html
.streamlit/: config.toml
dashboard/: app.py  styles.py
dashboard/components/: charts.py  data_table.py  filters.py  kpi.py
dashboard/services/: data_service.py
data/raw/: death_rate.csv  life_expectancy_female.csv  life_expectancy_male.csv
docs/: ARCHITECTURE.md
outputs/figures/: life_expectancy_trend.html  sankey.html  world_map.html
scripts/: export_assets.py
