[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nxp-life-expectancy-dashboard"
version = "1.0.0"
description = "World Bank health indicators analytics pipeline and Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "scipy>=1.10.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "streamlit>=1.28.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"dashboard/app.py" = ["E402"]
